--- a/src/app/pages/outbound-asm1/outbound-asm1.component.scss
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.scss
@@ -1555,6 +1555,12 @@
         min-width: unset;
       }
       
+      .lsx-search-box {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 0;
+      }
+      
       .scanner-buttons {
         justify-content: center;
       }
